Fixes of the HistoryChart. Y axis has human readable values now. The height of the HistoryChart is responsible now.

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -7,3 +7,23 @@
     width: 1em;
     height: 1em;
 }
+
+.min-vh-80 {
+    min-height: 80vh;
+}
+
+.min-vh-75 {
+    min-height: 75vh;
+}
+
+.min-vh-70 {
+    min-height: 70vh;
+}
+
+.min-vh-65 {
+    min-height: 65vh;
+}
+
+.min-vh-60 {
+    min-height: 60vh;
+}
